@@ -24,4 +24,5 @@ Doc: computes the gcd of all the coefficients of $x$,
  \bprog
  ? content([ [2], 4*matid(3) ])
  %1 = 2
- @eprog
+ @eprog\noindent The content of a \typ{VECSMALL} is computed assuming the
+ entries are signed integers in $[-2^{BIL-1}, 2^{BIL-1}[$.
