@@ -102,6 +102,14 @@ content([])
 content([;])
 content(matrix(0,2))
 
+vectorsmall(3)
+v=vectorsmall(3,i,3*i^2)
+content(v)
+content(vectorsmall(0))
+v=vectorsmall(5,i,(3-i)*i)
+content(v)
+vectorsmall(3,i,i^100)
+
 m=[1,0;0,0;0,1]; b=[1,2;0,0;3,4];
 liftint(Mod(m,2)^(-1))
 liftint(Mod(m,3)^(-1))
