@@ -236,6 +236,7 @@ AP 81- [GP] central simple algebra package, GP functions
    88- [libpari] function nf_get_ramified_primes
    89- Configure --with-runtime-perl option
 PB 90- Faster matrix multiplication over finite fields
+   91- allow content(t_VECSMALL)
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
